--- a/frontend/moody-tunes/src/main.css
+++ b/frontend/moody-tunes/src/main.css
@@ -1,13 +1,13 @@
 .home-div {
   width: 100%;
-  height: 400px;
+  height: 450px;
   background-color: var(--primary-color);
   color: var(--secondary-color);
 }
 
 .home-div-end {
   width: 100%;
-  height: 150px;
+  height: 350px;
 }
 
 .large-container {
@@ -94,7 +94,7 @@
 
 .music-info {
   width: 750px;
-  height: 425px;
+  height: 650px;
   padding: 25px 35px;
   font-family: Roboto, sans-serif;
   font-weight: 100;
@@ -103,7 +103,7 @@
   float: right;
   background-color: var(--webpage-background);
   margin-top: 55px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
   box-shadow: 0 27.5px 40px -17.5px rgba(0, 0, 0, 0.4),
     46.2px 37.5px 40px -17.5px rgba(0, 0, 0, 0.4);
   animation-duration: 1s;
@@ -112,6 +112,12 @@
   animation-iteration-count: 1;
   animation-name: growLarger;
   border-radius: 15px;
+}
+
+.music-spotify {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (max-width: 1700px) {
@@ -150,18 +156,20 @@
   }
 }
 
-.music-text {
+.music-canvas {
   width: 100%;
   background-color: white;
-  height: 75%;
+  height: 78%;
   border-radius: 15px;
   box-shadow: 0px 2px 13px 0px rgba(0, 0, 0, 0.15);
+  margin-bottom: 10px;
 }
 
 .music-text-prompt {
   font-family: Roboto, sans-serif;
   font-weight: 100;
   padding: 20px;
+  text-align: center;
 }
 
 .music-button {
@@ -233,7 +241,6 @@
   color: var(--primary-gray);
   width: 70%;
   padding: 30px 35px;
-  height: 400px;
   margin-top: 15px;
   margin: 10px 20px;
   border-radius: 15px;
@@ -247,6 +254,23 @@
   font-size: 15px;
   margin-top: 10px;
   color: var(--primary-gray);
+}
+
+.playlist-row {
+  font-size: 20px;
+  font-weight: 400;
+  padding: 10px 15px;
+  border-radius: 10px;
+  text-align: center;
+}
+.playlist-row:hover {
+  box-shadow: 0 0 35px -2px rgba(0, 0, 0, 0.4);
+}
+
+.playlist-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .spotify-card {
